# alphabetic-merkle

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
api/src/controllers/: accounts.rs  mod.rs  proposals.rs
benches/: large_merkle_bench.rs
entity/src/: accounts.rs  mod.rs  prelude.rs  proposals.rs
merkletree/: Cargo.toml
merkletree/benches/: large_merkle_bench.rs
merkletree/src/: account_with_balance.rs  lib.rs  merkle_tree.rs
migration/src/: lib.rs  m20230828_000000_setup_database.rs  m20230828_013249_create_address_domain.rs  m20230828_060306_create_proposal_table.rs  m20230828_071737_create_account_table.rs  m20230828_090601_link_account_proposal_tables.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/accounts/: queries.rs
services/src/proposals/: mod.rs  pagination.rs  queries.rs
services/src/utils/: errors.rs  pagination.rs
src/: lib.rs  main.rs
tmp/: main.rs
