[package]
name = "alpha_merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.8"
rand = "0.8.5"
rs_merkle = "1.4.1"
thiserror = "1.0.47"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "large_merkle_bench"
harness = false
