[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
entity = { path = "../entity" }
services = { path = "../services" }
thiserror = "1.0.47"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-uuid"] }
serde_json = "1.0.105"
serde = "1.0.188"
anyhow = "1.0.75"
tower-http = { version="0.4.3", features = ["timeout", "compresion-gzip", ] }
