[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
entity = { path = "../entity" }
services = { path = "../services" }
migration = { path = "../migration" }
merkletree = { path = "../merkletree" }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-uuid"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
serde = "1.0.188"
anyhow = "1.0.75"
tower-http = { version="0.4.3", features = ["timeout", "compression-gzip", "trace", "map-response-body", "util" ] }
tower = "0.4.13"
ethers = "2.0.9"
tokio-util = "0.7.8"
